# prj-rubiks

./: .gitignore  README.md  hacs.json  pyproject.toml  requirements_test.txt
custom_components/rubiks/: __init__.py  button.py  cal_store.py  camera.py  camera_processor.py  config_flow.py  const.py  image.py  manifest.json  number.py  sensor.py  solver.py  strings.json  text.py
custom_components/rubiks/tests/: __init__.py
custom_components/rubiks/translations/: en.json
docs/: features.md  spec.md
